# avr-cmake-blinky

./: CMakeLists.txt  Makefile  README.md  main.c
